--- a/sass/partials/design/_homepage.scss
+++ b/sass/partials/design/_homepage.scss
@@ -89,9 +89,9 @@
 
 }
 
-// Video
+// In action section
 
-.video {
+.in-action {
   padding: $space 0 $space-and-half;
   background-color: $white;
   
